--- a/linalg/x86_64/fma/fma_mmm_i8_8x8.tmpl
+++ b/linalg/x86_64/fma/fma_mmm_i8_8x8.tmpl
@@ -294,13 +294,21 @@ fma_mmm_i8_8x8:
     {% for col in (0..7) %}
         mov r10,    r9
         {% for row in (0..3) %}
-            vextractps  ebx, xmm{{col}}, {{row}}
+            {% if os == "macos" %}
+                extractps  ebx, xmm{{col}}, {{row}}
+            {% else %}
+                vextractps  ebx, xmm{{col}}, {{row}}
+            {% endif %}
             mov         byte ptr [r10], bl
             add         r10, rsi
         {% endfor %}
         vperm2f128  ymm{{col}},   ymm{{col}},   ymm{{col}},  1
         {% for row in (0..3) %}
-            vextractps  ebx, xmm{{col}}, {{row}}
+            {% if os == "macos" %}
+                extractps  ebx, xmm{{col}}, {{row}}
+            {% else %}
+                vextractps  ebx, xmm{{col}}, {{row}}
+            {% endif %}
             mov         byte ptr [r10], bl
             add         r10, rsi
         {% endfor %}
@@ -315,13 +323,21 @@ fma_mmm_i8_8x8:
     {% for col in (0..7) %}
         mov r10,    r9
         {% for row in (0..3) %}
-            vextractps  ebx, xmm{{col}}, {{row}}
+            {% if os == "macos" %}
+                extractps  ebx, xmm{{col}}, {{row}}
+            {% else %}
+                vextractps  ebx, xmm{{col}}, {{row}}
+            {% endif %}
             mov         dword ptr [r10], ebx
             add         r10, rsi
         {% endfor %}
         vperm2f128  ymm{{col}},   ymm{{col}},   ymm{{col}},  1
         {% for row in (0..3) %}
-            vextractps  ebx, xmm{{col}}, {{row}}
+            {% if os == "macos" %}
+                extractps  ebx, xmm{{col}}, {{row}}
+            {% else %}
+                vextractps  ebx, xmm{{col}}, {{row}}
+            {% endif %}
             mov         dword ptr [r10], ebx
             add         r10, rsi
         {% endfor %}
@@ -341,13 +357,21 @@ fma_mmm_i8_8x8:
     je      {{L}}store_vec_strides_i32
 
     {% for row in (0..3) %}
-        vextractps  ebx, xmm0, {{row}}
+        {% if os == "macos" %}
+            extractps  ebx, xmm0, {{row}}
+        {% else %}
+            vextractps  ebx, xmm0, {{row}}
+        {% endif %}
         mov         byte ptr [r8], bl
         add         r8, rsi
     {% endfor %}
     vperm2f128  ymm0,   ymm0,   ymm1,  1
     {% for row in (0..3) %}
-        vextractps  ebx, xmm0, {{row}}
+        {% if os == "macos" %}
+            extractps  ebx, xmm0, {{row}}
+        {% else %}
+            vextractps  ebx, xmm0, {{row}}
+        {% endif %}
         mov         byte ptr [r8], bl
         add         r8, rsi
     {% endfor %}
@@ -358,13 +382,21 @@ fma_mmm_i8_8x8:
 {{L}}store_vec_strides_i32:
 
     {% for row in (0..3) %}
-        vextractps  ebx, xmm0, {{row}}
+        {% if os == "macos" %}
+            extractps  ebx, xmm0, {{row}}
+        {% else %}
+            vextractps  ebx, xmm0, {{row}}
+        {% endif %}
         mov         dword ptr [r8], ebx
         add         r8, rsi
     {% endfor %}
     vperm2f128  ymm0,   ymm0,   ymm1,  1
     {% for row in (0..3) %}
-        vextractps  ebx, xmm0, {{row}}
+        {% if os == "macos" %}
+            extractps  ebx, xmm0, {{row}}
+        {% else %}
+            vextractps  ebx, xmm0, {{row}}
+        {% endif %}
         mov         dword ptr [r8], ebx
         add         r8, rsi
     {% endfor %}
